// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportDataModal renders correctly against snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div
      class="euiOverlayMask emotion-euiOverlayMask-aboveHeader"
      data-euiportal="true"
      data-relative-to-header="above"
    >
      <div
        data-eui="EuiFocusTrap"
      >
        <div
          aria-modal="true"
          class="euiModal emotion-euiModal"
          role="dialog"
          style="max-inline-size: 750px;"
          tabindex="0"
        >
          <button
            aria-label="Closes this modal window"
            class="euiButtonIcon euiModal__closeIcon emotion-euiButtonIcon-xs-empty-text-euiModal__closeIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
          <div
            class="euiModalHeader emotion-euiModalHeader"
          >
            <h1
              class="euiTitle euiModalHeader__title emotion-euiTitle-m"
            >
              title
            </h1>
          </div>
          <div
            class="euiModalBody emotion-euiModalBody"
          >
            <div
              class="euiModalBody__overflow emotion-euiModalBody__overflow"
            >
              <div
                class="euiText emotion-euiText-s"
              >
                <h4
                  id="generated-id"
                >
                  description
                </h4>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiFilePicker emotion-euiFilePicker-fullWidth"
              >
                <input
                  accept=".ndjson"
                  aria-describedby="rule-file-picker-filePicker__prompt"
                  aria-labelledby="generated-id"
                  class="euiFilePicker__input emotion-euiFilePicker__input-largeInteractive"
                  data-test-subj="rule-file-picker"
                  id="rule-file-picker"
                  type="file"
                />
                <div
                  class="euiFilePicker__prompt emotion-euiFilePicker__prompt-large"
                  id="rule-file-picker-filePicker__prompt"
                >
                  <span
                    aria-hidden="true"
                    class="euiFilePicker__icon emotion-euiFilePicker__icon-large"
                    color="primary"
                    data-euiicon-type="importAction"
                  />
                  <span
                    class="euiFilePicker__promptText"
                  >
                    subtitle
                  </span>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiCheckbox emotion-euiCheckbox"
              >
                <input
                  class="euiCheckbox__input"
                  data-test-subj="importDataModalCheckboxLabel"
                  id="importDataModalCheckboxLabel"
                  type="checkbox"
                />
                <div
                  class="euiCheckbox__square"
                />
                <label
                  class="euiCheckbox__label"
                  for="importDataModalCheckboxLabel"
                >
                  checkBoxLabel
                </label>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter emotion-euiModalFooter"
          >
            <button
              class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-fill-disabled"
              data-test-subj="import-data-modal-button"
              disabled=""
              type="button"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  submitBtnText
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ImportDataModal should import file, with warnings 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div
      class="euiOverlayMask emotion-euiOverlayMask-aboveHeader"
      data-euiportal="true"
      data-relative-to-header="above"
    >
      <div
        data-eui="EuiFocusTrap"
      >
        <div
          aria-modal="true"
          class="euiModal emotion-euiModal"
          role="dialog"
          style="max-inline-size: 750px;"
          tabindex="0"
        >
          <button
            aria-label="Closes this modal window"
            class="euiButtonIcon euiModal__closeIcon emotion-euiButtonIcon-xs-empty-text-euiModal__closeIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
          <div
            class="euiModalHeader emotion-euiModalHeader"
          >
            <h1
              class="euiTitle euiModalHeader__title emotion-euiTitle-m"
            >
              title
            </h1>
          </div>
          <div
            class="euiModalBody emotion-euiModalBody"
          >
            <div
              class="euiModalBody__overflow emotion-euiModalBody__overflow"
            >
              <div
                class="euiText emotion-euiText-s"
              >
                <h4
                  id="generated-id"
                >
                  description
                </h4>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiFilePicker euiFilePicker-hasFiles emotion-euiFilePicker-fullWidth-hasFiles"
              >
                <input
                  accept=".ndjson"
                  aria-describedby="rule-file-picker-filePicker__prompt"
                  aria-labelledby="generated-id"
                  class="euiFilePicker__input emotion-euiFilePicker__input-largeInteractive"
                  data-test-subj="rule-file-picker"
                  id="rule-file-picker"
                  type="file"
                />
                <div
                  class="euiFilePicker__prompt emotion-euiFilePicker__prompt-large"
                  id="rule-file-picker-filePicker__prompt"
                >
                  <span
                    aria-hidden="true"
                    class="euiFilePicker__icon emotion-euiFilePicker__icon-large"
                    color="primary"
                    data-euiicon-type="importAction"
                  />
                  <span
                    class="euiFilePicker__promptText"
                  >
                    subtitle
                  </span>
                  <button
                    aria-label="Remove selected files"
                    class="euiButtonEmpty euiFilePicker__clearButton emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-euiFilePicker__clearButton"
                    type="button"
                  >
                    <span
                      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate euiButtonEmpty__text"
                      >
                        Remove
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiPanel euiPanel--warning euiPanel--paddingMedium euiCallOut euiCallOut--warning emotion-euiPanel-none-m-warning-euiCallOut"
                data-test-subj="actionConnectorsWarningsCallOut"
              >
                <h2
                  class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-warning"
                >
                  <span
                    aria-hidden="true"
                    class="emotion-euiCallOut__icon"
                    color="inherit"
                    data-euiicon-type="warning"
                  />
                  <span
                    data-test-subj="actionConnectorsWarningsCallOutTitle"
                  >
                    1 connector imported
                  </span>
                </h2>
                <div
                  class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
                />
                <div
                  class="euiText emotion-euiText-s-euiTextColor-default"
                >
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-stretch-column"
                  >
                    <div
                      class="euiFlexItem emotion-euiFlexItem-grow-1"
                      data-test-subj="actionConnectorsWarningsCallOutMessage"
                    >
                      <div
                        class="euiText emotion-euiText-xs"
                      >
                        1 connector has sensitive information that requires updates.
                      </div>
                    </div>
                    <div
                      class="euiFlexItem emotion-euiFlexItem-grow-1"
                    >
                      <div
                        class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-flexEnd-columnReverse"
                      >
                        <button
                          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-warning"
                          data-test-subj="actionConnectorsWarningsCallOutButton"
                          type="button"
                        >
                          <span
                            class="emotion-euiButtonDisplayContent"
                          >
                            <span
                              class="eui-textTruncate"
                            >
                              buttonLabel
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiCheckbox emotion-euiCheckbox"
              >
                <input
                  class="euiCheckbox__input"
                  data-test-subj="importDataModalCheckboxLabel"
                  id="importDataModalCheckboxLabel"
                  type="checkbox"
                />
                <div
                  class="euiCheckbox__square"
                />
                <label
                  class="euiCheckbox__label"
                  for="importDataModalCheckboxLabel"
                >
                  checkBoxLabel
                </label>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter emotion-euiModalFooter"
          >
            <button
              class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-fill-disabled"
              data-test-subj="import-data-modal-button"
              disabled=""
              type="button"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  submitBtnText
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ImportDataModal should import file, with warnings but no action_connectors_success_count 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div
      class="euiOverlayMask emotion-euiOverlayMask-aboveHeader"
      data-euiportal="true"
      data-relative-to-header="above"
    >
      <div
        data-eui="EuiFocusTrap"
      >
        <div
          aria-modal="true"
          class="euiModal emotion-euiModal"
          role="dialog"
          style="max-inline-size: 750px;"
          tabindex="0"
        >
          <button
            aria-label="Closes this modal window"
            class="euiButtonIcon euiModal__closeIcon emotion-euiButtonIcon-xs-empty-text-euiModal__closeIcon"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
          <div
            class="euiModalHeader emotion-euiModalHeader"
          >
            <h1
              class="euiTitle euiModalHeader__title emotion-euiTitle-m"
            >
              title
            </h1>
          </div>
          <div
            class="euiModalBody emotion-euiModalBody"
          >
            <div
              class="euiModalBody__overflow emotion-euiModalBody__overflow"
            >
              <div
                class="euiText emotion-euiText-s"
              >
                <h4
                  id="generated-id"
                >
                  description
                </h4>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiFilePicker euiFilePicker-hasFiles emotion-euiFilePicker-fullWidth-hasFiles"
              >
                <input
                  accept=".ndjson"
                  aria-describedby="rule-file-picker-filePicker__prompt"
                  aria-labelledby="generated-id"
                  class="euiFilePicker__input emotion-euiFilePicker__input-largeInteractive"
                  data-test-subj="rule-file-picker"
                  id="rule-file-picker"
                  type="file"
                />
                <div
                  class="euiFilePicker__prompt emotion-euiFilePicker__prompt-large"
                  id="rule-file-picker-filePicker__prompt"
                >
                  <span
                    aria-hidden="true"
                    class="euiFilePicker__icon emotion-euiFilePicker__icon-large"
                    color="primary"
                    data-euiicon-type="importAction"
                  />
                  <span
                    class="euiFilePicker__promptText"
                  >
                    subtitle
                  </span>
                  <button
                    aria-label="Remove selected files"
                    class="euiButtonEmpty euiFilePicker__clearButton emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-euiFilePicker__clearButton"
                    type="button"
                  >
                    <span
                      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                    >
                      <span
                        class="eui-textTruncate euiButtonEmpty__text"
                      >
                        Remove
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
              />
              <div
                class="euiCheckbox emotion-euiCheckbox"
              >
                <input
                  class="euiCheckbox__input"
                  data-test-subj="importDataModalCheckboxLabel"
                  id="importDataModalCheckboxLabel"
                  type="checkbox"
                />
                <div
                  class="euiCheckbox__square"
                />
                <label
                  class="euiCheckbox__label"
                  for="importDataModalCheckboxLabel"
                >
                  checkBoxLabel
                </label>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter emotion-euiModalFooter"
          >
            <button
              class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-fill-disabled"
              data-test-subj="import-data-modal-button"
              disabled=""
              type="button"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  submitBtnText
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
